# issue-tracker

./: .gitignore  AI_FEATURES.md  PRODUCTION_PATTERNS.md  README.md  ROADMAP.md  ROADMAP_v2.md  compose.yml
backend/: pyproject.toml
backend-ist/: feature.md  pyproject.toml
backend-ist/alembic/: env.py
backend-ist/alembic/versions/: 4f82599ba08a_create_issues_table.py
backend-ist/app/: config.py  main.py  schemas.py
backend-ist/app/routes/: issues.py
backend/alembic/: env.py
backend/alembic/versions/: 3a1268de07b0_initial.py  97c6fbd4d4cf_initial.py  c7ffb7c89a04_add_projects_and_model_updates_on_issue.py
backend/app/: config.py  database.py  main.py
backend/app/core/: auth.py  config.py
backend/app/models/: __init__.py  issues.py  projects.py  users.py
backend/app/routes/: auth.py  issues.py  projects.py  user.py
backend/tests/: conftest.py  test_auth.py  test_issues.py  test_projects.py
be-ist/: .env  alembic.ini  main.py  pyproject.toml
be-ist/alembic/: env.py
be-ist/alembic/versions/: 38623fcf5a80_create_issues_table.py
be-ist/app/: config.py  database.py  schemas.py  storage.py
be-ist/app/middleware/: timer.py
be-ist/app/routes/: issues.py
be-ist/data/: issues.json
docs/: ARCHITECTURE_AND_FEATURES.md
fe-ist/: components.json  eslint.config.js  package.json  pnpm-lock.yaml
fe-ist/src/: App.tsx  index.css  main.tsx
fe-ist/src/components/: confirm-dialog.tsx  issue-form.tsx  issue-list.tsx
frontend/: components.json  package.json  pnpm-lock.yaml  skills-lock.json
frontend/src/: routeTree.gen.ts  styles.css
(+33 files in other folders)
